# meal-planner

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  index.html  pyproject.toml  requirements.txt  startup.sh
app/: agent.py  config.py  database.py  main.py  meal_planner_agent.py  models.py
app/prompts/: meal-plan.txt
requirements/: dev.txt  prod.txt
src/: main.py
static/: index.html
static/js/: mealplanner.js
