[project]
name = "meal-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dnspython>=2.7.0",
    "fastapi[standard]>=0.115.12",
    "openai>=1.84.0",
    "pymongo[srv]>=4.13.0",
    "uvicorn[standard]>=0.34.2",
]
